[gd_scene load_steps=10 format=3 uid="uid://dweaukumcs380"]

[ext_resource type="Script" path="res://scripts/virtual_window.gd" id="2_1h6b5"]
[ext_resource type="PackedScene" uid="uid://dy7mn335sodxp" path="res://scenes/level_one.tscn" id="2_xdf2g"]
[ext_resource type="Texture2D" uid="uid://bm588qftihs5y" path="res://sprites/xpwindowmenu.png" id="5_n7th2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlg7o"]
size = Vector2(4096, 2048)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjw2k"]
size = Vector2(2048, 8192)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_c0aus"]
bounce = 0.2

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lhtgy"]
friction = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6svjr"]
size = Vector2(8192, 2048)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_nn202"]
bounce = 0.2

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true
metadata/_edit_horizontal_guides_ = [281.0]

[node name="VirtualWindow" type="Control" parent="."]
unique_name_in_owner = true
clip_children = 1
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_right = 10000.0
offset_bottom = 10000.0
mouse_filter = 1
script = ExtResource("2_1h6b5")
metadata/_edit_lock_ = true

[node name="World" type="Node2D" parent="VirtualWindow"]
unique_name_in_owner = true

[node name="LevelOne" parent="VirtualWindow/World" instance=ExtResource("2_xdf2g")]
unique_name_in_owner = true

[node name="WorldBorderBottom" type="StaticBody2D" parent="VirtualWindow/World"]
position = Vector2(960, 2104)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/WorldBorderBottom"]
shape = SubResource("RectangleShape2D_rlg7o")

[node name="WorldBorder" type="StaticBody2D" parent="VirtualWindow/World"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/WorldBorder"]
position = Vector2(2944, 540)
shape = SubResource("RectangleShape2D_sjw2k")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="VirtualWindow/World/WorldBorder"]
position = Vector2(960, -1024)
shape = SubResource("RectangleShape2D_rlg7o")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="VirtualWindow/World/WorldBorder"]
position = Vector2(-1024, 500)
shape = SubResource("RectangleShape2D_sjw2k")

[node name="Walls" type="Node2D" parent="VirtualWindow/World"]
unique_name_in_owner = true

[node name="WallLeft" type="RigidBody2D" parent="VirtualWindow/World/Walls"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_c0aus")
can_sleep = false
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/Walls/WallLeft"]
position = Vector2(78, 667)
shape = SubResource("RectangleShape2D_sjw2k")

[node name="WallBottom" type="RigidBody2D" parent="VirtualWindow/World/Walls"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_lhtgy")
can_sleep = false
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/Walls/WallBottom"]
position = Vector2(1350, 1980)
shape = SubResource("RectangleShape2D_6svjr")

[node name="WallTop" type="RigidBody2D" parent="VirtualWindow/World/Walls"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
can_sleep = false
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/Walls/WallTop"]
position = Vector2(1353, -430)
shape = SubResource("RectangleShape2D_6svjr")

[node name="WallRight" type="RigidBody2D" parent="VirtualWindow/World/Walls"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2
physics_material_override = SubResource("PhysicsMaterial_nn202")
can_sleep = false
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="VirtualWindow/World/Walls/WallRight"]
position = Vector2(2630, 665)
shape = SubResource("RectangleShape2D_sjw2k")

[node name="WindowMenu" type="NinePatchRect" parent="VirtualWindow"]
offset_right = 2578.0
offset_bottom = 32.0
texture = ExtResource("5_n7th2")
region_rect = Rect2(0, 0, 128, 32)
patch_margin_left = 128
patch_margin_right = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
